[tool.poetry]
name = "pydantic-toolbox"
version = "0.1.0"
description = "Usefool tools and types for pydantic that for some reasons are not shipped with it"
authors = ["Bobronium <appkiller16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
