[tool.poetry]
name = "pydantic-toolbox"
version = "0.1.0"
description = "Usefool tools and types for pydantic that for some reasons are not shipped with it"
authors = ["Bobronium <appkiller16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.3.2"}

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "@overload", "@abc.abstractmethod"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
